# stackalert-lambda

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  renovate.json
.github/workflows/: ci.yml  deploy.yml  release.yml
src/: accounts.rs  anomaly.rs  config.rs  cost_explorer.rs  dedup.rs  main.rs  telegram.rs
src/notify/: mod.rs  pagerduty.rs  ses.rs  slack.rs  sns.rs  teams.rs  telegram.rs  webhook.rs
