[package]
name = "stackalert-lambda"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "StackAlert — AWS cost spike detection Lambda (Rust)"
license = "Apache-2.0"
repository = "https://github.com/stackalertapp/stackalert-lambda"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[features]
default = ["telegram"]
cross-account = ["dep:aws-sdk-sts", "dep:aws-credential-types"]
telegram = []
slack = []
teams = []
pagerduty = []
webhook = []
ses = ["dep:aws-sdk-ses"]
sns = ["dep:aws-sdk-sns"]
all-channels = ["telegram", "slack", "teams", "pagerduty", "webhook", "ses", "sns"]

[dependencies]
# AWS Lambda runtime
lambda_runtime = "1.0"

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-costexplorer = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ssm = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sts = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"], optional = true }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"], optional = true }
aws-sdk-ses = { version = "1", optional = true }
aws-sdk-sns = { version = "1", optional = true }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Async utilities (join_all for concurrent channel fan-out)
futures-util = "0.3"

# HTTP client for webhook-based notification channels
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"      # Optimize for size → smaller cold start
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip debug symbols → smaller binary
panic = "abort"      # Smaller binary, faster
